# WindowGuardianBEEBS

./: CMakeLists.txt  README.md  run.py  sdkconfig  sdkconfig.old  to_table.py
components/freertos/: CMakeLists.txt
components/freertos/FreeRTOS-Kernel/: tasks.c
components/freertos/FreeRTOS-Kernel/include/freertos/: FreeRTOS.h
components/freertos/FreeRTOS-Kernel/portable/: port_common.c
components/freertos/FreeRTOS-Kernel/portable/riscv/: port.c
components/freertos/FreeRTOS-Kernel/portable/xtensa/: aes_enabling.h  aes_encryption.S  port.c  portasm.S  xtensa_init.c  xtensa_vectors.S
main/: CMakeLists.txt  gen_cmake.py  main.c  support.h
main/huffbench/: libhuffbench.c
